--- a/example1/src/resources/test2.properties
+++ b/example1/src/resources/test2.properties
@@ -2,8 +2,8 @@ testfile2.property1=aap
 testfile2.property2=${testfile2.property1}noot
 choicelists=choicelist1
 choicelists=choicelist2
-choicelists=choicelist3
+choicelists=choicelist3${prop1.example}
 choicelists=choicelist4
 choicelists=choicelist5
-choicelists=choicelist6
+choicelists=choicelist6${testfile1.property1}
 choicelists=choicelist7
