--- a/example1/src/resources/test2.properties
+++ b/example1/src/resources/test2.properties
@@ -7,3 +7,35 @@ choicelists=choicelist4
 choicelists=choicelist5
 choicelists=choicelist6${testfile1.property1}
 choicelists=choicelist7
+
+#Define which test(s) have to be executed
+test.edsservice=true
+
+##EDS service test configuration
+eds.url.types=/EDSServiceDRM/types?repositoryId=GEMINI
+eds.url.types.expectedresult=[{"symbolicName":"CBTDocuments"}]
+
+eds.url.types.clientnumberSymbolicField=GlobalClientID
+eds.url.types.clientnumber=123
+
+#Be aware only use something from eds.url.types.expectedresult
+eds.url.type=/EDSServiceDRM/type/CBTDocuments
+##Be aware multiline property with \
+eds.url.type.payload=\
+{"objectId":null,\
+	"clientContext":\
+	{"locale":"en_US","userid":"@username@","desktop":"@desktop@"},\
+	"properties":[\
+{"value":null,"symbolicName":"FullLegalName"},\
+{"value":null,"symbolicName":"Client_Team"},\
+{"value":null,"symbolicName":"Ultimate_Parent"},\
+{"value":@clientnumber@,"symbolicName":"@clientnumberSymbolicField@"},\
+{"value":0,"symbolicName":"ClassificationStatus"}],\
+"repositoryId":"@repositoryId@",\
+"requestMode":"inProgressChanges",\
+"externalDataIdentifier":null}
+#Check for FullLegalName, teamname returned in the lengty 6k+ returned json result
+eds.url.type.expectedresults=Koninklijke Ahold N.V.
+
+
+cbt.gemini.choicelist.CBT_Locations.values=Hong Kong|Hong Kong;Netherlands|Netherlands
